--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   permission_handler: ^11.3.0
   percent_indicator: ^4.2.3
   share_plus: ^7.2.2
+  pdf_compressor: ^0.2.0
+  video_compress: ^3.1.2
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
